# nwhitlockmtfd-pixel

./: README.md
ghostframe-swarm/: .gitignore  README.md
ghostframe-swarm/agents/: backend_engineer.yaml  planner.yaml  reviewer.yaml
ghostframe-swarm/agents/prompts/: backend_engineer.md  planner.md  reviewer.md
ghostframe-swarm/backend/: README.md  pyproject.toml
ghostframe-swarm/backend/ghostframe/: __init__.py  swarm.py
ghostframe-swarm/backend/ghostframe/cli/: main.py
ghostframe-swarm/backend/ghostframe/events/: __init__.py  bus.py  envelope.py  store.py
ghostframe-swarm/backend/ghostframe/kernel/: __init__.py  approvals.py  workflow.py
ghostframe-swarm/backend/ghostframe/memory/: __init__.py  store.py
ghostframe-swarm/backend/ghostframe/models/: __init__.py  base.py  providers.py  router.py
ghostframe-swarm/backend/ghostframe/tools/: __init__.py  base.py  builtin.py  runner.py
ghostframe-swarm/backend/ghostframe/workers/: __init__.py  actions.py  definition.py  loop.py
ghostframe-swarm/backend/tests/: conftest.py  test_events.py  test_router_and_tools.py  test_worker_loop.py  test_workflow.py
ghostframe-swarm/docs/: api.md  architecture.md  core-systems.md  dashboard.md  database-schema.md  design-review.md  memory.md  plugins.md  repository-structure.md  roadmap.md  workers.md
ghostframe-swarm/examples/01-hello-swarm/: README.md
ghostframe-swarm/workflows/: feature-dev-mini.yaml
